[tool.poetry]
name = "hexlet-points"
version = "0.3.1"
description = "A SICP'ish Points implemented in Python using hexlet-pairs"
authors = ["Hexlet Team <info@hexlet.io>"]
license = "ISC"
readme = "README.md"
homepage = "https://github.com/hexlet-components/python-points"
repository = "https://github.com/hexlet-components/python-points"
classifiers = [
    "Intended Audience :: Education",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3.6",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
packages = [
    { include = "hexlet/points/*.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6"
hexlet-pairs = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
wemake-python-styleguide = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
