[project]
name = "hexlet-points"
version = "0.3.1"
description = "A SICP'ish Points implemented in Python using hexlet-pairs"
authors = [{name = "Hexlet Team <info@hexlet.io>"}]
license = "ISC"
readme = "README.md"
homepage = "https://github.com/hexlet-components/python-points"
repository = "https://github.com/hexlet-components/python-points"
classifiers = [
    "Intended Audience :: Education",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3.6",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "hexlet-pairs>=0.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hexlet"]
